--- a/src/view/Login.xaml
+++ b/src/view/Login.xaml
@@ -65,8 +65,8 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Login" FontSize="20" FontWeight="Bold" Foreground="White"/>
-            <TextBox Grid.Row="3" Text="📧 Username" Style="{StaticResource RoundedTextBox}"/>
-            <Button Grid.Row="5" Content="Login" Style="{StaticResource RoundedButton}" Margin="30, 10, 30, 0"/>
+            <TextBox Grid.Row="3" Text="{Binding Nombre}" Style="{StaticResource RoundedTextBox}"/>
+            <Button Grid.Row="5" Content="Login" Style="{StaticResource RoundedButton}" Margin="30, 10, 30, 0" Click="OnButtonLogin"/>
         </Grid>
     </Grid>
 </Window>
